[package]
name = "senax-actix-session"
version = "0.4.0"
edition = "2021"
authors = ["yossyX"]
description = "Senax actix session library"
repository = "https://github.com/yossyX/senax"
keywords = ["http", "web", "framework", "async", "session"]
license = "MIT OR Apache-2.0"

[dependencies]
actix-utils = "3"
actix-web = { version = "4", default_features = false, features = ["cookies", "secure-cookies"] }
anyhow = "1"
ciborium = "0.2.1"
derive_more = "0.99.5"
log = { version = "0.4", features = [ "release_max_level_info", "kv_unstable_serde" ] }
serde = "1"
senax-common = "0.3.0"
sha2 = "0.10.6"
time = "0.3.19"
tokio = { version = "1.28", features = [ "full" ] }
