[package]
name = "senax-actix-session"
version = "0.4.3"
edition = "2024"
authors = ["yossyX"]
description = "Senax actix session library"
repository = "https://github.com/yossyX/senax"
keywords = ["http", "web", "framework", "async", "session"]
license = "MIT OR Apache-2.0"

[dependencies]
actix-utils = "3"
actix-web = { version = "4", default-features = false, features = ["cookies", "secure-cookies"] }
anyhow = "1"
ciborium = "0.2.1"
derive_more = { version = "2", features = ["from"] }
log = "0.4"
serde = "1"
senax-common = { path = "../common", version = "0.3.2" }
sha2 = "0.10.6"
time = "0.3.19"
tokio = { version = "1.28", features = ["time"] }
