[package]
name = "senax-common"
version = "0.3.0"
edition = "2021"
authors = ["yossyX"]
license = "MIT OR Apache-2.0"
description = "Senax common library"
repository = "https://github.com/yossyX/senax"
keywords = ["senax"]

[features]
etcd = ["etcd-client"]
uring = ["tokio-uring"]

[dependencies]
anyhow = "1.0"
arc-swap = "1.5.1"
async-graphql = "6.0"
async-trait = "0.1"
base64 = "0.21.5"
bincode = "1.3.3"
byte-unit = { version = "4.0", default-features = false, features = ["std"] }
bytes = "1.4"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2.1"
crc32fast = "1.3.2"
crossbeam = "0.8.2"
derive_more = "0.99"
downcast-rs = "1.2.0"
etcd-client = { version = "0.11", features = ["tls"], optional = true }
futures = "0.3.13"
fxhash = "0.2"
hex = "0.4.3"
log = { version = "0.4", features = [ "release_max_level_info", "kv_unstable_serde" ] }
lz4_flex = { version = "0.9.3" }
moka = { version = "0.9", features = ["future"] }
nom = "7"
once_cell = "1.8.0"
rand = "0.8"
regex = "1"
schemars = { version = "0.8.10" }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.12"
serde_json = "1.0.51"
sha2 = "0.10.6"
time = "0.3.19"
tokio = { version = "1.28", features = [ "full" ] }
tokio-uring = { version = "0.4", features = ["bytes"], optional = true }
zstd = "0.12"
