[package]
name = "senax-common"
# TODO version up
version = "0.3.1"
edition = "2021"
authors = ["yossyX"]
license = "MIT OR Apache-2.0"
description = "Senax common library"
repository = "https://github.com/yossyX/senax"
keywords = ["senax"]

[features]
etcd = ["etcd-client"]
uring = ["tokio-uring"]

[dependencies]
anyhow = "1.0"
arc-swap = "1.5.1"
graphql6 = { package = "async-graphql", version = "6.0", optional = true }
async-trait = "0.1"
base64 = "0.21.5"
bincode = "1.3.3"
byte-unit = { version = "4.0", default-features = false, features = ["std"] }
bytes = "1.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ciborium = "0.2.1"
crc32fast = "1.3.2"
crossbeam = { version = "0.8.2", default-features = false, features = ["alloc"] }
derive_more = "0.99"
downcast-rs = "1.2.0"
etcd-client = { version = "0.11", features = ["tls"], optional = true }
futures = "0.3.13"
fxhash = "0.2"
hex = "0.4.3"
log = "0.4"
lz4_flex = { version = "0.9.3", default-features = false, features = ["frame"] }
moka = { version = "0.9", features = ["future"] }
nom = "7"
once_cell = "1.8.0"
rand = "0.8"
regex = "1"
schemars = "0.8.10"
serde = "1.0"
serde_bytes = "0.11.12"
serde_json = "1.0.51"
sha2 = "0.10.6"
time = "0.3.19"
tokio = { version = "1.28", features = ["macros", "sync", "time"] }
tokio-uring = { version = "0.4", features = ["bytes"], optional = true }
utoipa5 = { package = "utoipa", version = "5.2.0", optional = true }
zstd = { version = "0.12", default-features = false }
