[package]
name = "senax-common"
version = "0.4.2"
edition = "2024"
authors = ["yossyX"]
license = "MIT OR Apache-2.0"
description = "Senax common library"
repository = "https://github.com/yossyX/senax"
keywords = ["senax"]

[features]
etcd = ["etcd-client"]
uring = ["tokio-uring"]

[dependencies]
anyhow = "1.0"
arc-swap = "1.5.1"
graphql6 = { package = "async-graphql", version = "6.0", optional = true }
graphql7 = { package = "async-graphql", version = "7.0", optional = true }
async-trait = "0.1"
base64 = "0.22"
bincode = "2"
byte-unit = { version = "5", default-features = false, features = ["std", "byte"] }
bytes = "1.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
crc32fast = "1.3.2"
crossbeam = { version = "0.8.2", default-features = false, features = ["alloc"] }
derive_more = { version = "2", features = ["display"] }
downcast-rs = "2"
etcd-client = { version = "0.14", features = ["tls"], optional = true }
futures = "0.3.13"
fxhash = "0.2"
hex = "0.4.3"
log = "0.4"
moka = { version = "0.12", features = ["future"] }
nom = "8"
once_cell = "1.8.0"
rand = "0.9"
regex = "1"
schemars = "0.8.10"
senax-encoder = "0.2.0"
serde = "1.0"
serde_bytes = "0.11.12"
serde_json = "1.0.51"
time = "0.3.19"
tokio = { version = "1.28", features = ["macros", "sync", "time"] }
tokio-uring = { version = "0.5", features = ["bytes"], optional = true }
utoipa5 = { package = "utoipa", version = "5.2.0", optional = true }
zstd = { version = "0.13", default-features = false }
