[package]
name = "senax-linker"
version = "0.1.0"
edition = "2021"
authors = ["yossyX"]
license = "MIT OR Apache-2.0"
description = "SenaX linker"
repository = "https://github.com/yossyX/senax"
keywords = ["senax"]

[dependencies]
anyhow = "1.0"
bincode = "1.3"
bytes = "1.2"
clap = { version = "3.2", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.9"
etcd-client = { version = "0.10", features = ["tls"] }
futures-util = "0.3"
hostname = "^0.3"
if-addrs = "0.7"
log = "0.4"
mimalloc = "0.1.26"
pem = "1.0"
quinn = { version = "0.8", features = [ "tls-rustls" ] }
rcgen = "0.10"
regex = "1"
rustls = { version = "0.20", features = [ "quic" ] }
rustls-pemfile = "1.0"
sha2 = "0.10"
tokio = { version = "1.20", features = [ "macros", "rt-multi-thread", "sync", "signal", "time" ] }
tokio-uring = { version = "0.3", features = [ "bytes" ] }
zstd = "0.11"
