[package]
name = "senax-linker"
version = "0.2.1"
edition = "2024"
authors = ["yossyX"]
license = "MIT OR Apache-2.0"
description = "Senax linker"
repository = "https://github.com/yossyX/senax"
keywords = ["senax"]

[dependencies]
anyhow = "1.0"
bincode = "1.3"
bytes = "1.4"
clap = { version = "~4.5.7", features = ["derive"] }
dotenvy = "0.15"
env_logger = "0.10"
etcd-client = { version = "0.11", features = ["tls"] }
futures-util = "0.3"
hostname = "0.3"
if-addrs = "0.10"
log = "0.4"
mimalloc = "0.1"
pem = "1.1"
quinn = { version = "0.10", features = [ "tls-rustls" ] }
rcgen = "0.10"
regex = "1"
rustls = { version = "0.21", features = [ "quic" ] }
rustls-pemfile = "1.0"
serde_bytes = "0.11.12"
sha2 = "0.10"
tokio = { version = "1.28", features = [ "macros", "rt-multi-thread", "sync", "signal", "time" ] }
tokio-uring = { version = "0.4", features = [ "bytes" ] }
zstd = "0.12"
