[package]
name = "senax-logger"
version = "0.2.4"
edition = "2021"
authors = ["yossyX"]
license = "MIT OR Apache-2.0"
description = "Senax logger"
repository = "https://github.com/yossyX/senax"
keywords = ["senax"]

[features]
uring = ["tokio-uring"]
jsonl = []

[dependencies]
ahash = "0.8"
anyhow = "1.0"
bytes = "1.4"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0.0"
env_logger = "0.10"
log = { version = "0.4", features = [ "release_max_level_info", "kv_unstable_serde" ] }
once_cell = "1.8.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3.14", features = ["formatting", "macros"] }
tokio = { version = "1.28", features = [ "full" ] }
tokio-uring = { version = "0.4", features = ["bytes"], optional = true }
zstd = "0.12"
