[package]
name = "senax-logger"
version = "0.2.5"
edition = "2021"
authors = ["yossyX"]
license = "MIT OR Apache-2.0"
description = "Senax logger"
repository = "https://github.com/yossyX/senax"
keywords = ["senax"]

[features]
uring = ["tokio-uring"]
jsonl = []

[dependencies]
ahash = "0.8"
anyhow = "1.0"
bytes = "1.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
colored = "2.0.0"
env_logger = "0.10"
log = { version = "0.4", features = [ "kv_unstable_serde" ] }
once_cell = "1.8.0"
regex = "1"
serde = "1.0"
serde_json = "1.0"
time = { version = "0.3.14", features = ["formatting"] }
tokio = { version = "1.28", features =  ["rt-multi-thread", "sync", "time"] }
tokio-uring = { version = "0.4", features = ["bytes"], optional = true }
zstd = { version = "0.12", default-features = false }
