[package]
name = "senax-macros"
version = "0.2.0"
edition = "2024"
authors = ["yossyX"]
license = "MIT OR Apache-2.0"
description = "Senax macros"
repository = "https://github.com/yossyX/senax"
keywords = ["senax"]

[lib]
proc-macro = true

[dependencies]
darling = "0.14"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["derive"] }
