[package]
name = "senax-macros"
version = "0.2.2"
edition = "2024"
authors = ["yossyX"]
license = "MIT OR Apache-2.0"
description = "Senax macros"
repository = "https://github.com/yossyX/senax"
keywords = ["senax"]

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["derive"] }
