[package]
name = "senax-mysql-parser"
version = "0.1.10"
edition = "2024"
authors = ["yossyX"]
license = "MIT"
description = "MySQL parser for Senax. This library is forked from https://github.com/ms705/nom-sql ."
repository = "https://github.com/yossyX/senax"
keywords = ["senax"]

[dependencies]
derive_more = { version = "2", features = ["display"] }
nom = "8"
serde = { version = "1.0", features = ["derive", "rc"] }
