[package]
name = "senax"
version = "0.1.0"
edition = "2018"
authors = ["yossyX"]
license = "MIT OR Apache-2.0"
description = "SenaX ORM for Rust"
repository = "https://github.com/yossyX/senax"
homepage = "https://yossyx.github.io/senax/"
keywords = ["senax", "database", "orm", "sqlx", "mysql", "async"]
categories = ["database"]
readme = "../README.md"

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0"
askama = "=0.10.5"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "3.2", features = ["derive"] }
convert_case = "0.4.0"
derive_more = "0.99.17"
dotenv = "0.15.0"
format_serde_error = "0.3.0"
includedir = "0.6.0"
indexmap = { version = "1.9.1", features = ["serde-1"] }
nom = "7"
once_cell = "1.13.0"
phf = "0.8.0"
regex = "1"
schemars = { version = "0.8.10", features = ["indexmap1", "preserve_order"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.8"
sha2 = "0.10.6"
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "mysql"] }
tera = { version = "1.17.0", features = ["date-locale", "preserve_order"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
includedir_codegen = "0.6.0"
