[package]
name = "senax"
version = "0.3.23"
edition = "2024"
authors = ["yossyX"]
license = "MIT OR Apache-2.0"
description = "Senax Web Server Code Generator"
repository = "https://github.com/yossyX/senax"
homepage = "https://yossyx.github.io/senax/"
keywords = ["senax", "database", "orm", "sqlx", "async"]
categories = ["database"]
readme = "../README.md"

[features]
default = ["config"]
config = ["axum", "axum-aws-lambda", "tower", "tower-http", "lambda_http", "flate2", "http", "httpdate"]

[dependencies]
anyhow = "1.0"
askama = "=0.12.1"
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "~4.5.7", features = ["derive"] }
compact_str = "0.9"
convert_case = "0.8"
crc = "3.0.1"
derive_more = { version = "2", features = ["display"] }
dialoguer = "0.11"
dotenvy = "0.15.0"
fancy-regex = "0.14.0"
format_serde_error = "0.3.0"
glob = "0.3.1"
includedir = "0.6.0"
indexmap = { version = "2", features = ["serde"] }
Inflector = "=0.11.4"
lazy_static = "1.4.0"
mime_guess = "2.0.4"
once_cell = "1.13.0"
phf = "0.8.0"
proc-macro2 = "1.0.76"
rand = "0.9"
regex = "1"
rquickjs = { version = "0.9", features = ["rust-alloc"], default-features = false }
schemars = { version = "0.8.22", features = ["indexmap2", "preserve_order"] }
semver = "1.0.22"
senax-inflector = "0.1.1"
senax-mysql-parser = { path = "../mysql-parser", version = "=0.1.8" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
sha2 = "0.10.6"
shell-escape = "0.1.5"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "mysql"] }
strum = "0.27"
strum_macros = "0.27"
syn = "2.0.48"
tera = { version = "1.17.0", features = ["date-locale", "preserve_order"] }
termcolor = "1.2.0"
tokio = { version = "1", features = ["full"] }
validator = { version = "0.20", features = ["derive", "unic"] }
webbrowser = "1"

axum = { version = "0.8", optional = true }
axum-aws-lambda = { version = "0.10", optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
tower-http = { version = "0.6", features = ["compression-full", "cors", "trace"], optional = true }
lambda_http = { version = "0.14", optional = true }
flate2 = { version = "1.0", optional = true }
http = { version = "1.1", optional = true }
httpdate = { version = "1.0", optional = true }

[build-dependencies]
includedir_codegen = "0.6.0"
