[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-service = "2.0"
actix-web = "4.1"
ahash = "0.8"
anyhow = "1.0"
async-stream = "0.3"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.2.16", features = ["derive"] }
db_sample = { path = "../db/sample" }
db_session = { path = "../db/session" }
derive_more = "0.99"
dotenvy = "0.15.6"
env_logger = "0.9"
futures = "0.3.13"
log = { version = "0.4", features = [ "release_max_level_info", "kv_unstable" ] }
mimalloc = "0.1.26"
mime = "0.3"
once_cell = "1.8.0"
rand = "0.8.0"
rust_decimal = "1.19"
senax-common = "0.1.4"
senax-logger = "0.1"
serde = { version = "1.0.106", features = ["rc"] }
serde_json = "1.0.51"
serde_urlencoded = "0.7"
sha2 = "0.10.6"
thiserror = "1.0"
time = "0.3.5"
tokio = { version = "1.25", features = [ "full" ] }
tracing = { version = "0.1", features = ["release_max_level_warn", "log-always"] }
validator = { version = "0.14", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
nix = "0.24"
signal-hook = "0.3.14"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
